# cmakemfc

./: .gitignore  CMakeLists.txt  DlgProxy.cpp  DlgProxy.h  LICENSE  ReadMe.md  Resource.h  framework.h  mfcdemo.aps  mfcdemo.cpp  mfcdemo.h  mfcdemo.idl  mfcdemo.rc  mfcdemo.reg  mfcdemoDlg.cpp  mfcdemoDlg.h  mfcdemo_h.h  mfcdemo_i.c
__cmake/: cotire.cmake  global.cmake
res/: mfcdemo.rc2
